#cmake_minimum_required(VERSION 3.15)
cmake_minimum_required(VERSION 3.13)
project(c C)

set(CMAKE_C_STANDARD 11)

add_executable(
        c main.c
        Base00.h
        Base00.c
        Base01.c
        Base01.h
        Chapter01Test.c
        Chapter01Test.c
        Chapter02Test.c
        Chapter03Test.c
        Chapter04Test.c
        Chapter05Test.c
        Chapter06Test.c
        Chapter07Test.c
        Chapter08Test.c
        Chapter09Test.c
        Chapter10Test.c
        Chapter11Test.c
        Chapter12Test.c
        Chapter13Test.c
        Chapter14Test.c
        Chapter15Test.c
        Chapter16Test.c
        Chapter17Test.c
        runoob/Chapter01Test.c
        shizhan/Chapter01Test.c
)
